<resources>
    <string name="app_name">Crema</string>

    <string name="google_api_key">AIzaSyCPAq3TK8qJU2xTz_fE_NBhs4Oh7CVCJLo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="sign_in_hint_email">이메일</string>
    <string name="sign_in_hint_pw">패스워드</string>
    <string name="sign_in_btn_login">로그인</string>
    <string name="sign_in_btn_sign_up">간편 회원가입</string>
    <string name="sign_in_tv_no">아직 회원이 아니신가요?</string>

    <string name="sign_up_hint_email">E-mail</string>
    <string name="sign_up_hint_password">비밀번호</string>
    <string name="sign_up_hint_password_check">비밀번호 재확인</string>
    <string name="sign_up_btn_sign_up">회원가입</string>

    <string name="search_region_title">지도로 위치 지정</string>
    <string name="search_region_btn_ok">확인</string>
    <string name="search_region_btn_search">검색</string>

</resources>
